Creating better tests outputs